--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>numpad</title>
 </head>
 <body>
-    <p>Hello World!<p>
+    <h1>Welcome</h1>
+    <p>Hello World!</p>
 </body>
 
 </html>
