Center Image, no ugly border

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header>
-    <center><img src='public/image/numpad.png'></center></center>
+<body>
     
-</header>
-
+</body>
 </html>
