--- a/killer.html
+++ b/killer.html
@@ -25,7 +25,7 @@
 				</nav>
 			</div>
 			<div class="row">
-				<img id="question" class="mb-3 rounded"></img>
+				<img id="question" class="mb-3 fluid rounded"></img>
 			</div>
 			<div class="row">
 				<button id="test-again-btn" style="display:none;" class="btn btn-primary btn-lg mt-md-1 mb-md-3 mx-auto" onclick="location.reload()">Test again</button>
