--- a/killer.html
+++ b/killer.html
@@ -15,7 +15,7 @@
 			}
 		</style>
 
-		<title>Find your killer</title>
+		<title>Otz Killer quiz</title>
 	</head>
 	<body>
 		<div class="container">
@@ -25,7 +25,7 @@
 				</nav>
 			</div>
 			<div class="row">
-				<img id="question" class="mb-3 fluid rounded"></img>
+				<img id="question" class="mb-3 img-fluid rounded"></img>
 			</div>
 			<div class="row">
 				<button id="test-again-btn" style="display:none;" class="btn btn-primary btn-lg mt-md-1 mb-md-3 mx-auto" onclick="location.reload()">Test again</button>
