--- a/killer.html
+++ b/killer.html
@@ -42,7 +42,7 @@
 						<button id="answer-0" action="0" class="col answer-hide answer-btn btn btn-success"></button>
 					</div>
 					<div class="row">
-						<button id="answer-1" action="1" class="col answer-hide answer-btn btn btn-warning"></button>
+						<button id="answer-1" action="1" class="col answer-hide answer-btn btn btn-warning" style="background-color:#7239b3"></button>
 					</div>
 					<div class="row">
 						<button id="answer-2" action="2" class="col answer-hide answer-btn btn btn-dark"></button>
