--- a/killer.html
+++ b/killer.html
@@ -63,7 +63,16 @@
 				</div>
 			</div>
 		</div>
-
+		<footer id="sticky-footer" class="py-4 text-dark">
+			<div class="container text-center">
+				<hr>
+				<small>
+					Data and images produced by <a href="https://www.youtube.com/watch?v=nflN137VU5g">Otzdarva</a> in no affiliation to me.
+					<br>
+					Website by <a href="https://github.com/numpad">me</a>.
+				</small>
+			</div>
+		</footer>
 		<script>
 			var question_id = 0;
 			var points = Array(20).fill(0).map(function (i) {
