--- a/killer.html
+++ b/killer.html
@@ -170,7 +170,7 @@
 				
 				// update fields
 				$('#question-title').html(
-					q.name + '<small class="text-muted"> <a href="#" target="_blank" id="question-video-url" class="text-muted">Otz explains</a></small>');
+					q.name + '<small class="text-muted"> <a href="#" target="_blank" id="question-video-url" class="text-nowrap text-muted">Otz explains</a></small>');
 
 				$('#question-video-url').attr('href', 'https://youtu.be/nflN137VU5g?t=' + q.link);
 				$('.answer-btn').hide();
