--- a/killer.html
+++ b/killer.html
@@ -83,8 +83,17 @@
 
 			var question_url = 'https://youtu.be/nflN137VU5g?t=';
 			var killernames = ['Trapper', 'Wraith', 'Hillbilly', 'Nurse', 'Spirit', 'Legion', 'Plague', 'Ghostface',
-			                   'Huntress', 'Myers', 'Hag', 'Doctor', 'Demogorgon', 'Oni', 'Deathslinger', 'Pyramid Head',
-			                   'Cannibal', 'Freddy', 'Pig', 'Clown'];
+			                   'Huntress', 'Shape', 'Hag', 'Doctor', 'Demogorgon', 'Oni', 'Deathslinger', 'Pyramid Head',
+			                   'Cannibal', 'Nightmare', 'Pig', 'Clown'];
+
+			var cmp_eq = (k, c) => { return k == c ? 1 : 0 };
+			var cmp_less = (k, c) => {
+				if (c == 0) return cmp_eq(k, c);
+				k++;
+				c++;
+				return k <= c ? (k/c) : 0;
+			};
+			
 			var questions = [
 				{
 					'name':    'Strength',
@@ -95,6 +104,7 @@
 						1, 2, 0, 2, 2, 0, 1, 1,
 						2, 0, 3, 3,
 					],
+					'cmp': cmp_less,
 				},
 				{
 					'name': 'Playstyle',
@@ -105,6 +115,7 @@
 						1, 3, 0, 1, 1, 3, 1, 2,
 						1, 1, 2, 1,
 					],
+					'cmp': cmp_eq,
 				},
 				{
 					'name': 'Complexity',
@@ -115,6 +126,7 @@
 						1, 0, 2, 0, 0, 1, 1, 1,
 						0, 0, 0, 0, 
 					],
+					'cmp': cmp_eq,
 				},
 				{
 					'name': 'Addons',
@@ -125,6 +137,7 @@
 						0, 0, 0, 1, 2, 0, 2, 1,
 						2, 1, 2, 2,
 					],
+					'cmp': cmp_less,
 				},
 				{
 					'name': 'RNG',
@@ -135,6 +148,7 @@
 						1, 0, 0, 1, 0, 0, 0, 1,
 						0, 1, 2, 0,
 					],
+					'cmp': cmp_less,
 				},
 				{
 					'name': 'Popularity',
@@ -145,6 +159,7 @@
 						0, 1, 2, 2, 2, 1, 1, 1,
 						2, 0, 2, 2,
 					],
+					'cmp': cmp_eq,
 				},
 				{
 					'name': 'Skill-cap',
@@ -155,6 +170,7 @@
 						0, 2, 1, 0, 0, 0, 0, 0,
 						2, 2, 2, 0,
 					],
+					'cmp': cmp_eq,
 				},
 			];
 			
@@ -186,9 +202,17 @@
 				nav.html('');
 				for (var i = 0; i < questions.length; ++i) {
 					if (i == current_question) {
-						nav.append('<li class="breadcrumb-item active" aria-current="page">' + questions[i].name + '</li>');
+						if (is_answered(i)) {
+							nav.append('<li class="breadcrumb-item active" aria-current="page">' + questions[i].name + '</li>');
+						} else {
+							nav.append('<li class="breadcrumb-item active" aria-current="page"><b>' + questions[i].name + '</b></li>');
+						}
 					} else {
-						nav.append('<li class="breadcrumb-item"><a href="#" onclick="load_question(' + i + ');">' + questions[i].name + '</a></li>');
+						if (is_answered(i)) {
+							nav.append('<li class="breadcrumb-item"><a href="#" onclick="load_question(' + i + ');">' + questions[i].name + '</a></li>');
+						} else {
+							nav.append('<li class="breadcrumb-item"><a href="#" onclick="load_question(' + i + ');"><b>' + questions[i].name + '</b></a></li>');
+						}
 					}
 				}
 			}
@@ -206,6 +230,10 @@
 					}
 					return 0;
 				}).reduce((a, b) => a + b);
+			}
+
+			function is_answered(n) {
+				return point_history[n].reduce((a, b) => a + b ) > 0;
 			}
 
 			function show_result() {
@@ -227,7 +255,7 @@
 				var points = get_points();
 				var answers = get_answer_count();
 				var max_points = (points.reduce((a, b) => { return Math.max(a, b); }) / answers);
-				console.log(max_points);
+				
 				for (var i = 0; i < killernames.length; ++i) {
 					var result = points[i] / answers;
 					var colors = ['bg-danger', 'bg-warning', 'bg-info', 'bg-success'];
@@ -251,7 +279,7 @@
 				var question = questions[question_id];
 				
 				if (question) {
-					var pts = question.killers.map(a => a == choice ? 1 : 0);
+					var pts = question.killers.map(a => question.cmp(a, choice));
 					point_history[question_id] = pts;
 					load_question(++question_id);
 					update_result();
