fixed img width

--- a/killer.html
+++ b/killer.html
@@ -25,13 +25,13 @@
 				</nav>
 			</div>
 			<div class="row">
-				<img id="question-0" src="/public/image/q0.jpg" class="mb-3 question-img img-fluid rounded"></img>
-				<img id="question-1" src="/public/image/q1.jpg" class="mb-3 question-img img-fluid rounded" style="display:none;"></img>
-				<img id="question-2" src="/public/image/q2.jpg" class="mb-3 question-img img-fluid rounded" style="display:none;"></img>
-				<img id="question-3" src="/public/image/q3.jpg" class="mb-3 question-img img-fluid rounded" style="display:none;"></img>
-				<img id="question-4" src="/public/image/q4.jpg" class="mb-3 question-img img-fluid rounded" style="display:none;"></img>
-				<img id="question-5" src="/public/image/q5.jpg" class="mb-3 question-img img-fluid rounded" style="display:none;"></img>
-				<img id="question-6" src="/public/image/q6.jpg" class="mb-3 question-img img-fluid rounded" style="display:none;"></img>
+				<img id="question-0" src="/public/image/q0.jpg" class="mb-3 w-100 question-img img-fluid rounded"></img>
+				<img id="question-1" src="/public/image/q1.jpg" class="mb-3 w-100 question-img img-fluid rounded" style="display:none;"></img>
+				<img id="question-2" src="/public/image/q2.jpg" class="mb-3 w-100 question-img img-fluid rounded" style="display:none;"></img>
+				<img id="question-3" src="/public/image/q3.jpg" class="mb-3 w-100 question-img img-fluid rounded" style="display:none;"></img>
+				<img id="question-4" src="/public/image/q4.jpg" class="mb-3 w-100 question-img img-fluid rounded" style="display:none;"></img>
+				<img id="question-5" src="/public/image/q5.jpg" class="mb-3 w-100 question-img img-fluid rounded" style="display:none;"></img>
+				<img id="question-6" src="/public/image/q6.jpg" class="mb-3 w-100 question-img img-fluid rounded" style="display:none;"></img>
 			</div>
 			<div class="row">
 				<button id="test-again-btn" style="display:none;" class="btn btn-primary btn-lg mt-md-1 mb-md-3 mx-auto" onclick="location.reload()">Test again</button>
